--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ h4 {
   color: #fff;
   line-height: 3rem;
   font-weight: lighter;
+  z-index: 2;
+
 }
 
 p {
@@ -40,6 +42,23 @@ iframe{
   width: 100%;
 }
 
+.bck-logo {
+  width: 20rem;
+  opacity: .1;
+    margin-left: 25rem;
+
+}
+
+.container {
+  position: relative;
+  z-index: 1;
+}
+.content::after{
+  z-index: 2;
+  position: absolute;
+  top: 0;
+}
+
 .carousel-item{
   text-align: center;
 }
@@ -61,7 +80,7 @@ iframe{
 
 .f-left {
   float: left;
-  width: 50%;
+  width: 40%;
 }
 
 .h1-bgd {
@@ -84,6 +103,7 @@ iframe{
   padding: 2% 0 2% 0;
   color: #764C29;
   background-color: #FCBA6B;
+  opacity: .7;
 }
 
 .navbar-toggler {
@@ -102,6 +122,18 @@ iframe{
   padding: 2% 0 2% 0;
   color: #764C29;
   background-color: #C79770;
+}
+
+.zoom {
+  padding: 2px;
+    transition: transform .2s; /* Animation */
+  width: 300px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(1.8); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
 }
 
 #footer {
