--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h4 {
   line-height: 3rem;
   font-weight: lighter;
   z-index: 2;
+  text-align: justify;
 
 }
 
@@ -70,7 +71,7 @@ iframe{
 .contact-icon {
   font-size: 1.8rem;
   color: #fff;
-  padding-bottom: 1.3rem;
+  padding: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .display-image {
